main home page added

--- a/index.html
+++ b/index.html
@@ -7,4 +7,68 @@ title: Home
   <center>
     <h1>Ankit Solanki</h1>
   </center>
+  <center><img src="/space/img/ankitr.jpg" width="200px" height="200px" style="border-radius: 50%;"></center>
+  <div style="text-align: left;">
+  <ul>
+  	<li>
+  	Ankit is currently studying in <b>Indian Institute of Technology, Delhi (IIT-D) in computer science and engineering (CS&E)</b>.
+  	</li>
+  	<li>
+  	Ankit has an <b>INTP-T</b> personality type (MBTI).
+  	</li>
+  	<li>
+  	Ankit likes to express <b>intense type of dark</b> feels in rhythmic words. His peotic works can be found <a href="{{ '/writings' | prepend: site.baseurl }}">here</a>.
+  	</li>
+  	<li>
+  	Ankit have an interest in <b>abstract absurdism, existentialism, and psycho-philosophy</b>. He likes to read <b>Albert Camus</b> and <b>Jean Paul Sartre</b>.
+  	</li>
+  	<li>
+  	Ankit Solanki is a <b>typical oldschool movie fanatic</b> and <b>music lover</b>. He listens to almost all genres but do have some personal favourites.
+  	</li>
+  </ul>
 </div>
+</div>
+<center>
+<div>
+<hr style="opacity: 0.4;">
+<br>
+	<h2>Social-Networks</h2>
+</div>
+<div class="socials">
+	{% if site.twitter_username %}
+	    <a href="https://twitter.com/{{ site.twitter_username }}">
+	      <i class="fa fa-twitter"></i> 
+	    </a>
+	{% endif %}
+	{% if site.github_username %}
+	    <a href="https://github.com/{{ site.github_username }}">
+	      <i class="fa fa-github"></i> 
+	    </a>
+	{% endif %}
+	{% if site.linkedin_username %}
+	    <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+	      <i class="fa fa-linkedin"></i> 
+	    </a>
+	{% endif %}
+	{% if site.google_plus_username %}
+	    <a href="https://plus.google.com/{{ site.google_plus_username }}">
+	      <i class="fa fa-google-plus"></i>
+	    </a>
+	{% endif %}
+	{% if site.facebook_username %}
+	    <a href="https://www.facebook.com/{{ site.facebook_username }}">
+	      <i class="fa fa-facebook"></i> 
+	    </a>
+	{% endif %}
+	{% if site.instagram_username %}
+	    <a href="https://www.instagram.com/{{ site.instagram_username }}">
+	<i class="fa fa-instagram" aria-hidden="true"></i>
+	    </a>
+	{% endif %}
+	{% if site.gmail_address %}
+	    <a href="https://www.facebook.com/{{ site.facebook_username }}">
+<i class="fa fa-envelope" aria-hidden="true"></i>
+	    </a>
+	{% endif %}
+</div>
+</center>
