--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title: Home
 	    </a>
 	{% endif %}
 	{% if site.facebook_username %}
-	    <a href="https://www.facebook.com/{{ site.facebook_username }}">
+	    <a href="{{ site.facebook_username }}">
 	      <i class="fa fa-facebook"></i> 
 	    </a>
 	{% endif %}
@@ -66,7 +66,7 @@ title: Home
 	    </a>
 	{% endif %}
 	{% if site.gmail_address %}
-	    <a href="https://www.facebook.com/{{ site.facebook_username }}">
+	    <a href="mailto:{{ site.gmail_address }}">
 <i class="fa fa-envelope" aria-hidden="true"></i>
 	    </a>
 	{% endif %}
