added reddit in _config.yml and social networks

--- a/index.html
+++ b/index.html
@@ -70,5 +70,10 @@ title: Home
 <i class="fa fa-envelope" aria-hidden="true"></i>
 	    </a>
 	{% endif %}
+	{% if site.reddit_username %}
+	    <a href="https://www.reddit.com/user/{{ site.reddit_username }}">
+<i class="fa fa-reddit" aria-hidden="true"></i>
+	    </a>
+	{% endif %}
 </div>
 </center>
