INDEX: main file changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
   	Ankit has an <b>INTP-T</b> personality type (MBTI).
   	</li>
   	<li>
-  	Ankit likes to express <b>intense type of dark</b> feels in rhythmic words. His peotic works can be found <a href="{{ '/writings' | prepend: site.baseurl }}">here</a>.
+  	Ankit likes to express <b>intense</b> feeling in rhythmic words. His peotic works can be found <a href="{{ '/writings' | prepend: site.baseurl }}">here</a>.
   	</li>
   	<li>
   	Ankit have an interest in <b>abstract absurdism, existentialism, and psycho-philosophy</b>. He likes to read <b>Albert Camus</b> and <b>Jean Paul Sartre</b>.
