--- a/writings/index.html
+++ b/writings/index.html
@@ -5,7 +5,7 @@ title: Writings
 
 <div>
   <h2>Writings</h2>
-  <h4>Sharing my own collections of words.</h4>
+  <h4>A place to put ideas into words.</h4>
 </div>
 <div class="catalogue">
   {% for post in paginator.posts %}
