new post for blog section

--- a/writings/index.html
+++ b/writings/index.html
@@ -4,8 +4,8 @@ title: Writings
 ---
 
 <div>
-  <h2>Writings</h2>
-  <h4>A place to put ideas into words.</h4>
+  <h2>Writings - Poetry.</h2>
+  <h4>A place to put ideas into words with rhythm.</h4>
 </div>
 <div class="catalogue">
   {% for post in paginator.posts %}
