ADD: new blogging category :: New: Post -> Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Quotes
+title: Philosophy
 ---
 
 
 <div>
-  <h2>Quotes</h2>
-  <h4>A set of wise and delicate words.</h4>
+  <h2>Philosophy</h2>
+  <h4>Some fundamental perceptions about aesthetic and epistomological beliefs as an academic discipline.</h4>
 </div>
 <div class="catalogue">
   {% for post in paginator.posts %}
