EDIT: taglines and index file

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@ title: Home
   	<li>
   	Ankit likes to express <b>intense</b> feeling in rhythmic words. His peotic works can be found <a href="{{ '/writings' | prepend: site.baseurl }}">here</a>.
   	</li>
+  	<li>Ankit have an interest in <b>abstract absurdism, existentialism, and psycho-philosophy</b>.</li>
   	<li>
-  	Ankit have an interest in <b>abstract absurdism, existentialism, and psycho-philosophy</b>. He likes to read <b>Albert Camus</b> and <b>Jean Paul Sartre</b>.
+  	Ankit is a <b>typical movie fanatic</b> and <b>music lover</b>, he listens to almost all genres but is really interested in heavy metal.
   	</li>
-  	<li>
-  	Ankit Solanki is a <b>typical oldschool movie fanatic</b> and <b>music lover</b>. He listens to almost all genres but do have some personal favourites.
-  	</li>
+  	<li>Ankit likes the color <b>navyblue</b>, the <b>rainy</b> weather, <b>tall</b> girls and the word <b>'exist'</b>.</li>
   </ul>
 </div>
 </div>
