CHANGE: personal values and some info

--- a/index.html
+++ b/index.html
@@ -28,10 +28,38 @@ title: Home
 </div>
 </div>
 <center>
+<!--- personal values-->
+<div>
+	<hr style="opacity: 0.4;">
+	<h2>Personal Values</h2>
+	<div style="text-align: left;">
+	<ul>
+		<li>Listen to everyone and then disregard it.</li>
+		</li>
+		<li>
+			One-eighty turns are appreciated and discouraged.
+		</li>
+		<li>
+			Don't get wet in every rain you seem to see.
+		</li>
+		<li>
+			Drink cool water and allocate your attention out of toxic social behavior.
+		</li>
+		<li>
+			Consider the possiblity that life can be meaningless and then be positive and stay inspired from an idea.
+		</li>
+		<li>
+			Have great friends, but don't get lonely when you are alone - Sartre.
+		</li>
+	</ul>
+	</div>
+</div>
+
+<!-- social network -->
 <div>
 <hr style="opacity: 0.4;">
 <br>
-	<h2>Social-Networks</h2>
+	<h2>Social Networks</h2>
 </div>
 <div class="socials">
 	{% if site.twitter_username %}
